--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,3 +54,18 @@ h2 {
     flex: 1;
     width: 90%;
 }
+
+.text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  .muted {
+    font-size: 10px;
+    color: darkgray;
+  }
+  
