--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
+    <link href="https://fonts.googleapis.com/css?family=Kadwa&display=swap" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
         integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
@@ -15,7 +16,11 @@
 
 <body>
     <div class="content">{% block content %} {% endblock %}</div>
-
+    <div class="e1" id="blueblur"></div>
+    <div class="e2" id="blueblur"></div>
+    <div class="e3" id="blueblur"></div>
+    <div class="e4" id="purpleblur"></div>
+    <div class="e5" id="purpleblur"></div>
 </body>
 
 </html>
