--- a/templates/home.html
+++ b/templates/home.html
@@ -3,17 +3,16 @@
 <form method="post" class="button">
     <h3>Enter The Chat Room</h3>
     <div>
-        <label>Name:</label>
-        <input type="text" placeholder="Pick a name!" name="name" value="{{name}}"/>
+        <input class="inputbox" type="text" placeholder="Pick a name!" name="name" value="{{name}}"/>
     </div>
-    <div class="join">
-        <input type="text" placeholder="Room Code" name="code" value="{{code}}"/>
-        <button type="submit" name="join">Join a Room</button>
+    <div>
+        <input class="join" type="text" placeholder="Room Code" name="code" value="{{code}}"/>
     </div>
-    <button type="submit" name="create" class="create-btn">Create a Room</button>
+    <button type="submit" name="join" class="join-btn">JOIN</button>
+    <button type="submit" name="create" class="create-btn">CREATE</button>
     {% if error %}
     <ul>
-        <li>{{error}}</li>
+        <li class="error">{{error}}</li>
     </ul>
     {% endif %}
 </form>
