--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,9 +19,9 @@ html, body {
     border-radius: 63px;
     background: #215E79;
     flex-direction: column;
-    width: 40vw;
+    width: 400px;
     max-width: 80%; 
-    height: 60vh;
+    height: 400px;
     flex-shrink: 0;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
@@ -36,7 +36,7 @@ h3 {
     text-overflow: ellipsis;
     color: #321746;
     font-family: 'Kadwa', sans-serif;
-    font-size: 2vw;
+    font-size: 1.6rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
