--- a/templates/room.html
+++ b/templates/room.html
@@ -10,7 +10,7 @@
       name="message"
       id="message"
     />
-    <button type="button" name="send" id="send-btn" onClick="sendMessage()">
+    <button type="button" class="sendbtn" name="send" id="send-btn" onClick="sendMessage()">
       Send
     </button>
   </div>
