--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,21 +104,17 @@ h3 {
     width: 100%;
 }
 
-
+/* ROOM STYLING BEGINS FROM HERE*/
 
 .message-box {
-    position: relative;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 10px;
+    height: 80vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 63px;
-    background: #215E79;
     flex-direction: column;
-    width: 400px;
-    max-width: 80%; 
-    height: 400px;
-    flex-shrink: 0;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    width: 80vw;
+    align-items: stretch;
 }
 
 .message-box h2{
@@ -130,7 +126,16 @@ h3 {
 }
 
 .sendbtn{
-    background: #215E79;
+    display: flex;
+    position: relative;
+    top: 50%;
+    right: 1%;
+    border-radius: 200px;
+    background: #D9D9D9;
+    border: 0;
+    width: 10%;
+    height: 20%;
+
 }
 
 
@@ -153,7 +158,7 @@ h2 {
 
 #message {
     flex: 1;
-    width: 90%;
+    width: 85%;
 }
 
 .text {
@@ -163,7 +168,17 @@ h2 {
     justify-content: space-between;
     padding-left: 10px;
     padding-right: 10px;
-  }
+    background: #215E79;
+    color: white;
+}
+
+.text span {
+    background: #215E79;
+}
+
+.text span strong{
+    background: #215E79;
+}
   
 .muted {
     font-size: 10px;
